[package]
name = "steamp"
version = "0.1.4"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
pingora-core = "0.3"
pingora-http = "0.3"
pingora-load-balancing = "0.3"
pingora-proxy = "0.3"
structopt = "0.3.26"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5.23", features = ["derive"] }

[profile.release]
strip = true 
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1